# ai-inventor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  _typos.toml  dead_allowlist.txt  lefthook.yml  pyproject.toml  pytest.ini
aii_launcher/: pyproject.toml
aii_launcher/.repotoire/: hmm_model.json
aii_launcher/src/aii_launcher/: __init__.py  container_init.py  deploy.py
aii_launcher/tests/: conftest.py  test_aii_pipeline_env.py  test_module_invariants.py  test_pipeline_only_run_id.py  test_pkill_orphans.py  test_runpod_guards.py  test_stop_all.py
aii_lib/: pyproject.toml
aii_lib/.repotoire/: hmm_model.json
aii_lib/src/aii_lib/: __init__.py  config.py  run_lifecycle.py  run_path.py  server_url.py  task_id.py  timestamp.py
aii_lib/src/aii_lib/abilities/: BENCHMARK.md  __init__.py  aii_ability.py  endpoint_names.py
aii_lib/src/aii_lib/abilities/ability_server/: __init__.py  ability_client.py  credentials.py  discovery.py  logging_config.py
aii_lib/src/aii_lib/agent_backend/: __init__.py  __main__.py
aii_lib/src/aii_lib/agent_backend/claude_agent_sdk/: __init__.py  active_sessions.py  agent.py  claude_agent_tel_adapter.py  config.py  replay.py  sdk_telemetry.py
aii_lib/src/aii_lib/agent_backend/claude_agent_sdk/core/: __init__.py  config.py  error_recovery.py  expected_files.py  hooks.py  prompts.py  retry.py  streaming.py
aii_lib/src/aii_lib/agent_backend/claude_agent_sdk/models/: __init__.py  enums.py  options.py  responses.py
aii_lib/src/aii_lib/agent_backend/claude_agent_sdk/utils/: __init__.py  cli.py
aii_lib/src/aii_lib/agent_backend/utils/: __init__.py  agent_helpers.py
aii_lib/src/aii_lib/dbos_app/: __init__.py  file_io.py
aii_lib/src/aii_lib/execute_env/: __init__.py  base.py  local.py
aii_lib/src/aii_lib/llm_backend/: __init__.py  _adapter.py  _tool_helpers.py  config.py  default_config.yaml  schema_utils.py  tool_loop.py  tool_loop_tel_adapter.py
aii_lib/src/aii_lib/llm_backend/claude_max/: __init__.py  adapter.py  config_dir.py  monitor.py  usage.py
aii_lib/src/aii_lib/llm_backend/claude_max/autologin/: __init__.py  __main__.py  accounts.py  autologin.py  oauth_flow.py  token_utils.py
aii_lib/src/aii_lib/llm_backend/openrouter/: __init__.py  _image.py  _stats.py  client.py  openrouter_llm_tel_adapter.py  or_to_json.py
aii_lib/src/aii_lib/prompts/: __init__.py  annotations.py  prompt_format.py  prompt_serializable.py  structured_output.py
aii_lib/src/aii_lib/remote/: contracts.py
aii_lib/src/aii_lib/run/: __init__.py  artifact.py  context.py  dispatch.py  emit.py  events.py  fork_override.py  fork_setup.py  llm_summary.py  loop_iteration.py  mdgroup.py  messages.py  module.py  node.py  node_id.py  node_index.py  node_stats_aggregator.py  run.py  sink.py  task.py
aii_lib/src/aii_lib/run/journal/: __init__.py  event_step.py  query.py  tailer.py
aii_lib/src/aii_lib/run/sinks/: __init__.py
aii_lib/src/aii_lib/run/sinks/clone/: __init__.py  sequenced_sink.py  sink.py
aii_lib/src/aii_lib/run/sinks/console/: __init__.py  colors.py  format.py  sink.py
aii_lib/src/aii_lib/run/sinks/health/: __init__.py  sink.py
aii_lib/src/aii_lib/run/sinks/otel/: __init__.py  log_correlation.py  sink.py
aii_lib/src/aii_lib/run/sinks/title/: __init__.py  sink.py
aii_lib/src/aii_lib/run/sinks/utils/: __init__.py  sequencer.py
aii_lib/src/aii_lib/run/workflows/: __init__.py
aii_lib/src/aii_lib/run/workflows/agent_worker/: __init__.py  input.py
aii_lib/src/aii_lib/utils/: __init__.py  cache_cleanup.py  config_overrides.py  gen_id.py  gh_auth.py  internal_auth.py  model_utils.py  paths.py  retry.py  run_mode.py  tmux.py
aii_lib/src/aii_lib/utils/agent_to_llm/: __init__.py  claude_agent_to_llm.py
aii_lib/src/aii_lib/utils/deploy_github/: __init__.py  deployer.py  repo_ops.py
aii_lib/src/aii_lib/workflows/: __init__.py  research_workflow.py  summarize.py
aii_lib/src/aii_lib/workflows/gen_kg/: __init__.py  verify.py  workflow.py
aii_lib/tests/: test_config_overrides.py
aii_pipeline/: .gitignore  pyproject.toml
aii_pipeline/.repotoire/: hmm_model.json
aii_pipeline/src/aii_pipeline/: __init__.py  cli.py  pipeline.py
aii_pipeline/src/aii_pipeline/llm_tools/: __init__.py  user_folder_tools.py
aii_pipeline/src/aii_pipeline/prompts/components/: __init__.py  aii_context.py  artifact_planning.py  artifact_scope.py  artifact_summaries.py  data_files.py  read_skills.py  research_practices.py  resources.py  time_budgets.py  todo.py  tool_calling.py  user_folder.py  user_request.py  work_solo_reminder.py  workspace.py
aii_pipeline/src/aii_pipeline/prompts/steps/_1_seed_hypo/: out_schema.py
aii_pipeline/src/aii_pipeline/run/: __init__.py  config.py  path.py  scaffold.py  typed_union.py
aii_pipeline/src/aii_pipeline/run/steps/: __init__.py  interim_summary.py  title.py
aii_pipeline/src/aii_pipeline/run/utils/: __init__.py  group_helpers.py
aii_pipeline/src/aii_pipeline/run/workflows/: __init__.py
aii_pipeline/src/aii_pipeline/steps/: __init__.py  base.py
aii_pipeline/src/aii_pipeline/steps/_1_seed_hypo/: __init__.py  sampling.py  seed_hypo.py
aii_pipeline/src/aii_pipeline/steps/_2_hypo_loop/: _1_gen_hypo.py  _2_review_hypo.py  __init__.py  hypo_loop.py
aii_pipeline/src/aii_pipeline/steps/_3_invention_loop/: _1_gen_strat.py  _2_gen_plan.py  _3_gen_art.py  _4_gen_paper_text.py  _5_review_paper.py  _6_upd_hypo.py  __init__.py  invention_loop.py
aii_pipeline/src/aii_pipeline/steps/_4_gen_paper_repo/: _1_gen_repo.py  _2_gen_viz.py  _3_gen_art_demo.py  _4_gen_full_paper.py  _5_deploy_gh.py  __init__.py  gen_paper_repo.py
aii_pipeline/src/aii_pipeline/utils/: __init__.py  context.py  pipeline_config.py
aii_pipeline/src/aii_pipeline/utils/config_models/: __init__.py  gen_paper.py  infra.py  invention_loop.py  llm.py  seed_hypo.py
aii_server/: aii_server.py  aii_server_cli.py  manage.py  pyproject.toml
aii_server/agent_abilities/: __init__.py  api.py  apps.py  discovery.py  middleware.py  state.py  worker.py
aii_server/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
(+3105 files in other folders)
