[project]
name = "aii_launcher"
version = "0.1.0"
description = "AI Inventor Launcher — orchestrate aii_server + aii_pipeline (local or RunPod)"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["aii_launcher*"]

[project.scripts]
aii_launcher = "aii_launcher.deploy:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
