[project]
name = "aii-server"
version = "2.0.0"
description = "AI Inventor Server — Django + Django Ninja + Abilities"
authors = [
    {name = "Adrian", email = "adrian@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-ninja>=1.3",
    "django-cors-headers>=4.6",
    "uvicorn>=0.35.0",
    "psutil>=7.0.0",
    "tiktoken>=0.5.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dashboard = [
    "django-allauth[socialaccount]>=65.0",
    "psycopg[binary,pool]>=3.1",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = ["aii_server_cli"]

[project.scripts]
aii_server = "aii_server_cli:main"
